--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,11 +15,11 @@
         <item name="colorError">@color/red_200</item>
 
         <!-- "On" colors -->
-        <item name="colorOnPrimary">@color/black_900</item>
-        <item name="colorOnSecondary">@color/black_900</item>
-        <item name="colorOnBackground">@color/white_50</item>
-        <item name="colorOnSurface">@color/white_50</item>
-        <item name="colorOnError">@color/black_900</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnBackground">@color/white</item>
+        <item name="colorOnSurface">@color/white</item>
+        <item name="colorOnError">@color/black</item>
 
         <!-- Toggle dark system bars -->
         <item name="android:windowLightStatusBar" tools:ignore="NewApi">false</item>
