--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,16 +10,16 @@
         <item name="colorSecondaryVariant">@color/lightblue_500</item>
 
         <!-- Background, surface, error colors -->
-        <item name="android:colorBackground">@color/white_100</item>
-        <item name="colorSurface">@color/white_50</item>
+        <item name="android:colorBackground">@color/white_50</item>
+        <item name="colorSurface">@color/white</item>
         <item name="colorError">@color/red_600</item>
 
         <!-- "On" colors -->
-        <item name="colorOnPrimary">@color/white_50</item>
-        <item name="colorOnSecondary">@color/black_900</item>
-        <item name="colorOnBackground">@color/black_900</item>
-        <item name="colorOnSurface">@color/black_900</item>
-        <item name="colorOnError">@color/white_50</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnBackground">@color/black</item>
+        <item name="colorOnSurface">@color/black</item>
+        <item name="colorOnError">@color/white</item>
 
         <!-- Use surface color for action bar and bottom nav -->
         <item name="actionBarTheme">@style/ThemeOverlay.AniApp.ActionBar.ColorSurface</item>
