--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -25,4 +25,14 @@
         <item name="android:windowLightStatusBar" tools:ignore="NewApi">false</item>
         <item name="android:windowLightNavigationBar" tools:ignore="NewApi">false</item>
     </style>
+
+    <!-- AMOLED app theme -->
+    <style name="Theme.AniApp.AMOLED" parent="Theme.AniApp">
+        <!-- Blacken background colors -->
+        <item name="android:colorBackground">@color/black</item>
+        <item name="colorSurface">@color/black</item>
+
+    </style>
+
+
 </resources>
