--- a/app/src/main/res/layout/adapter_anime_card.xml
+++ b/app/src/main/res/layout/adapter_anime_card.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
-    android:layout_width="140dp"
-    android:layout_height="257dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:focusable="true"
     android:clickable="true"
