--- a/app/src/main/res/layout/adapter_anime_card.xml
+++ b/app/src/main/res/layout/adapter_anime_card.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     android:focusable="true"
     android:clickable="true"
+    android:padding="8dp"
     android:foreground="?android:attr/selectableItemBackground">
 
     <androidx.cardview.widget.CardView
