--- a/app/src/main/res/layout/adapter_anime_card.xml
+++ b/app/src/main/res/layout/adapter_anime_card.xml
@@ -36,7 +36,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
-        android:maxLines="1"
+        android:maxLines="2"
+        android:textSize="12sp"
         android:text="Zombie Land Saga: Revenge"
         android:textStyle="bold" />
 
@@ -46,6 +47,7 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
+        android:textSize="10sp"
         android:text="Ep 2" />
 
 </LinearLayout>
