--- a/app/src/main/res/layout/anime_detail_info.xml
+++ b/app/src/main/res/layout/anime_detail_info.xml
@@ -26,15 +26,18 @@
 
     <TextView
         android:id="@+id/anime_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="48dp"
+        android:layout_marginEnd="8dp"
         android:lines="2"
         android:maxLines="2"
         android:minLines="1"
         android:text="Zombie Land Saga: Revenge"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/cardView2"
         app:layout_constraintTop_toTopOf="parent" />
 
