--- a/app/src/main/res/layout/adapter_anime_card.xml
+++ b/app/src/main/res/layout/adapter_anime_card.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
+    android:id="@+id/adapter_anime_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -13,8 +13,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="232dp"
         android:clipToPadding="true"
         app:cardCornerRadius="10.5dp">
 
@@ -25,6 +25,7 @@
             android:adjustViewBounds="true"
             android:contentDescription="animeCover"
             android:cropToPadding="true"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/sample_image_alt"
             tools:srcCompat="@drawable/sample_image" />
 
